--- a/www/composer.json
+++ b/www/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "webonyx/graphql-php": "^0.13.8",
         "ext-mongodb": "^1.6",
-        "mongodb/mongodb": "^1.5"
+        "mongodb/mongodb": "^1.5",
+        "ext-json": "^1.5"
     }
 }
