--- a/hosts/default.conf
+++ b/hosts/default.conf
@@ -2,6 +2,8 @@ server {
     index index.php;
     root /var/www;
 
+    add_header 'Access-Control-Allow-Origin' '*';
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
