--- a/www/composer.json
+++ b/www/composer.json
@@ -4,5 +4,8 @@
         "ext-mongodb": "^1.6",
         "mongodb/mongodb": "^1.5",
         "ext-json": "^1.5"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^7.5"
     }
 }
